styles.css
@font-face{
    font-family : "Perfect DOS VGA 437";
    src: url('./fonts/Perfect-DOS-VGA-437.ttf') format("truetype");
}

body {
    color: rgb(255, 238, 252);
    background: rgb(0,0, 255);
    padding-top: 2rem;
    font-family: 'Perfect DOS VGA 437';
    font-size: 1.25rem;
    input {
        background-color: rgb(30, 34, 41);
        border-style: solid;
        border-width: 0;
        color: rgb(255, 238, 252);
        font-family: 'Perfect DOS VGA 437';
        font-size: 1.25rem;
    }
    input:focus{
        outline: none
    }

}

.horizontal-center {
    display: flex;
    justify-content: center;
    flex-direction: row;
    width: 100vw;
}

.vertical-center{
    display:flex;
    justify-content: center;
    flex-direction: column;
    height: 75vh;
    width: 100vw;
    align-items: center;
    margin-left: 32rem;
    padding-left: 2rem;
    margin-right: 32rem;
    padding-right: 2rem;
    background-color: rgb(30, 34, 41);
    padding-bottom: 1rem
}

.output-area{
    align-items: center;
    height: 80vh;
    align-self: flex-start;
    letter-spacing : -1px;
    white-space : pre-wrap;
}

.cursor-input-container {
    width: 80vw;
    display: flex;
    flex-direction: row;
    flex: grow;
}

.input-prompt {
    padding-right :2rem;
}

.cursor-input {
    width: 100vw;
    text-wrap: wrap;
}

